apply styleguide and create v2
